--- a/src/main/resources/edu/ncku/todo/ui/secondary.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/secondary.fxml
@@ -6,7 +6,7 @@
 <?import javafx.geometry.Insets?>
 
 <VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171"
-    xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ncku.ui.SceneController">
+    xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ncku.todo.ui.SceneController">
     <children>
         <Label text="Secondary View" />
         <Button fx:id="secondaryButton" text="Switch to Primary View" onAction="#switchToPrimary" />
