--- a/src/main/resources/edu/ncku/todo/ui/Modify.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/Modify.fxml
@@ -15,15 +15,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="edu.ncku.todo.ui.CategoryModifyController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ncku.todo.ui.CategoryModifyController">
    <children>
       <BorderPane prefHeight="400.0" prefWidth="600.0">
          <top>
             <ToolBar BorderPane.alignment="CENTER">
               <items>
-                <Button mnemonicParsing="false" prefWidth="83.0" text="返回" />
-                  <Region prefHeight="23.0" prefWidth="421.0" />
+                  <Region prefHeight="23.0" prefWidth="508.0" />
                   <Button mnemonicParsing="false" prefHeight="23.0" prefWidth="75.0" text="確定" />
               </items>
             </ToolBar>
@@ -50,7 +48,9 @@
                                     <ChoiceBox prefWidth="150.0" />
                                  </children>
                               </HBox>
-                              <Region prefHeight="20.0" prefWidth="300.0" />
+                              <Region prefHeight="88.0" prefWidth="300.0" />
+                              <Line endX="190.0" startX="-100.0" />
+                              <Region prefHeight="22.0" prefWidth="300.0" />
                               <HBox prefHeight="100.0" prefWidth="200.0">
                                  <children>
                                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="請輸入新的類別名稱：" />
