--- a/src/main/resources/edu/ncku/todo/ui/MainView.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/MainView.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -14,15 +16,26 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="548.0" prefWidth="819.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ncku.todo.ui.MainViewController">
-   <children>
+<AnchorPane id="AnchorPane" opacity="0.7" prefHeight="548.0" prefWidth="819.0" style="-fx-background-color: #a2b9de;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ncku.todo.ui.MainViewController">
+    <children>
       <BorderPane prefHeight="548.0" prefWidth="819.0">
          <top>
-            <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <ToolBar prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #b8c5db;" BorderPane.alignment="CENTER">
               <items>
-                  <Button mnemonicParsing="false" text="新增類別/任務" />
-                  <Button mnemonicParsing="false" text="修改類別/任務" />
-                <Button mnemonicParsing="false" text="設定" />
+                  <Button fx:id="mainViewAddBotton" mnemonicParsing="false" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" style="-fx-background-color: #7190de;" text="新增類別/任務">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
+                  <Button fx:id="mainViewModButton" layoutX="10.0" layoutY="13.0" mnemonicParsing="false" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" style="-fx-background-color: #7190de;" text="修改類別/任務">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="mainViewSetButton" layoutX="107.0" layoutY="13.0" mnemonicParsing="false" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" style="-fx-background-color: #7190de;" text="設定">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
                   <Region prefHeight="29.0" prefWidth="522.0" />
               </items>
             </ToolBar>
@@ -30,24 +43,33 @@
          <left>
             <VBox BorderPane.alignment="CENTER">
                <children>
-                  <TabPane prefHeight="59.0" prefWidth="337.0" tabClosingPolicy="UNAVAILABLE" />
-                  <TableView prefHeight="508.0" prefWidth="337.0">
+                  <TabPane prefHeight="59.0" prefWidth="337.0" style="-fx-background-color: #b4caed;" tabClosingPolicy="UNAVAILABLE" />
+                  <TableView prefHeight="508.0" prefWidth="337.0" style="-fx-background-color: #b4caed;">
                     <columns>
-                        <TableColumn prefWidth="75.0" text="任務名稱" />
-                      <TableColumn prefWidth="75.0" text="任務狀態" />
-                      <TableColumn prefWidth="185.0" text="任務期限" />
+                        <TableColumn editable="false" prefWidth="75.0" sortable="false" style="-fx-background-color: ccd8eb;" text="任務名稱" />
+                      <TableColumn editable="false" prefWidth="185.0" sortable="false" style="-fx-background-color: #ccd8eb;" text="任務期限" />
+                      <TableColumn editable="false" prefWidth="75.0" sortable="false" style="-fx-background-color: #ccd8eb;" text="任務狀態" />
                     </columns>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
                   </TableView>
                </children>
             </VBox>
          </left>
          <right>
-            <AnchorPane prefHeight="508.0" prefWidth="483.0" BorderPane.alignment="CENTER">
+            <AnchorPane prefHeight="508.0" prefWidth="483.0" style="-fx-background-color: #a2b9de;" BorderPane.alignment="CENTER">
                <children>
                   <FlowPane fx:id="calendarPane" hgap="5.0" layoutX="8.0" layoutY="95.0" prefHeight="407.0" prefWidth="471.0" vgap="5.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="95.0" />
                   <HBox alignment="CENTER" prefHeight="49.0" prefWidth="483.0" spacing="10">
                      <children>
-                        <Button fx:id="prevBtn" mnemonicParsing="false" onAction="#onPrevMonth" text="&lt;" />
+                        <Button fx:id="prevBtn" mnemonicParsing="false" onAction="#onPrevMonth" onMouseEntered="#handleHover" onMouseExited="#handleExit" style="-fx-background-color: #7190de;" text="&lt;">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor></Button>
                         <Text fx:id="yearText" text="YYYY">
                            <font>
                               <Font size="25.0" />
@@ -58,7 +80,10 @@
                               <Font size="25.0" />
                            </font>
                         </Text>
-                        <Button fx:id="nextBtn" mnemonicParsing="false" onAction="#onNextMonth" text="&gt;" />
+                        <Button fx:id="nextBtn" mnemonicParsing="false" onAction="#onNextMonth" onMouseEntered="#handleHover" onMouseExited="#handleExit" style="-fx-background-color: #7190de;" text="&gt;">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor></Button>
                      </children>
                   </HBox>
                   <HBox alignment="CENTER" layoutY="50.0" prefHeight="45.0" prefWidth="483.0" spacing="4">
