--- a/src/main/resources/edu/ncku/todo/ui/add.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/add.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
@@ -15,14 +16,17 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ncku.todo.ui.AddController">
+<AnchorPane id="AnchorPane" opacity="0.8" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #a2b9de;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ncku.todo.ui.AddController">
    <children>
       <BorderPane prefHeight="400.0" prefWidth="600.0">
          <top>
-            <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <ToolBar prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #b8c5db;" BorderPane.alignment="CENTER">
               <items>
                   <Region prefHeight="29.0" prefWidth="501.0" />
-                <Button mnemonicParsing="false" prefHeight="23.0" prefWidth="83.0" text="確定" />
+                <Button fx:id="ModComfirmButton" mnemonicParsing="false" onAction="#switchToMainView" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" prefHeight="23.0" prefWidth="83.0" style="-fx-background-color: #7190de;" text="確定">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
               </items>
             </ToolBar>
          </top>
@@ -32,9 +36,9 @@
                   <VBox layoutX="4.0" layoutY="-1.0">
                      <children>
                         <Region prefHeight="17.0" prefWidth="300.0" />
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="新增類別" textAlignment="CENTER" wrappingWidth="300.0">
+                        <Text fill="#1b488b" strokeType="OUTSIDE" strokeWidth="0.0" text="新增類別" textAlignment="CENTER" wrappingWidth="300.0">
                            <font>
-                              <Font size="25.0" />
+                              <Font name="System Bold" size="25.0" />
                            </font>
                         </Text>
                         <Region prefHeight="22.0" prefWidth="300.0" />
@@ -42,7 +46,8 @@
                            <children>
                               <Region prefHeight="200.0" prefWidth="3.0" />
                               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="請輸入類別名稱：" />
-                              <TextField promptText="請輸入任務名稱" />
+                              <Region layoutX="10.0" layoutY="10.0" prefHeight="54.0" prefWidth="33.0" />
+                              <TextField promptText="請輸入任務名稱" style="-fx-background-color: #7190de;" />
                            </children>
                         </HBox>
                      </children>
@@ -59,31 +64,32 @@
                         <VBox>
                            <children>
                               <Region prefHeight="17.0" prefWidth="300.0" />
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="新增任務" textAlignment="CENTER" wrappingWidth="300.0">
+                              <Text fill="#1b488b" strokeType="OUTSIDE" strokeWidth="0.0" text="新增任務" textAlignment="CENTER" wrappingWidth="300.0">
                                  <font>
-                                    <Font size="25.0" />
+                                    <Font name="System Bold" size="25.0" />
                                  </font>
                               </Text>
                               <Region prefHeight="22.0" prefWidth="300.0" />
                               <HBox prefHeight="53.0" prefWidth="300.0">
                                  <children>
                                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="請選擇要新增任務到哪個類別：" />
-                                    <ChoiceBox prefHeight="23.0" prefWidth="125.0" />
+                                    <ChoiceBox prefHeight="23.0" prefWidth="125.0" style="-fx-background-color: #7190de;" />
                                  </children>
                               </HBox>
                               <HBox layoutX="10.0" layoutY="42.0" prefHeight="54.0" prefWidth="300.0">
                                  <children>
                                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="請輸入任務名稱：" />
                                     <Region prefHeight="54.0" prefWidth="69.0" />
-                                    <TextField prefHeight="23.0" prefWidth="128.0" promptText="請輸入任務名稱" />
+                                    <TextField prefHeight="23.0" prefWidth="128.0" promptText="請輸入任務名稱" style="-fx-background-color: #7190de;" />
                                  </children>
                               </HBox>
                               <HBox layoutX="10.0" layoutY="65.0" prefHeight="21.0" prefWidth="300.0">
                                  <children>
-                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="請輸入任務的截止日期 :" />
+                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="請選擇任務的截止日期 :" />
+                                    <Region prefHeight="23.0" prefWidth="25.0" />
+                                    <DatePicker prefHeight="23.0" prefWidth="143.0" style="-fx-background-color: #7190de;" />
                                  </children>
                               </HBox>
-                              <DatePicker prefHeight="23.0" prefWidth="162.0" />
                            </children>
                         </VBox>
                      </children>
@@ -92,7 +98,7 @@
             </Pane>
          </right>
          <center>
-            <Line endX="100.0" startX="100.0" startY="360.0" BorderPane.alignment="CENTER" />
+            <Line endX="100.0" startX="100.0" startY="360.0" stroke="#345994" strokeWidth="8.0" BorderPane.alignment="CENTER" />
          </center></BorderPane>
    </children>
 </AnchorPane>
