--- a/src/main/resources/edu/ncku/todo/ui/modify.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/modify.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
@@ -15,14 +16,17 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ncku.todo.ui.CategoryModifyController">
+<AnchorPane id="AnchorPane" opacity="0.8" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #a2b9de;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ncku.todo.ui.ModifyController">
    <children>
       <BorderPane prefHeight="400.0" prefWidth="600.0">
          <top>
-            <ToolBar BorderPane.alignment="CENTER">
+            <ToolBar style="-fx-background-color: #b8c5db;" BorderPane.alignment="CENTER">
               <items>
                   <Region prefHeight="23.0" prefWidth="508.0" />
-                  <Button mnemonicParsing="false" prefHeight="23.0" prefWidth="75.0" text="確定" />
+                  <Button fx:id="ModComfirmButton" mnemonicParsing="false" onAction="#switchToMainView" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" prefHeight="23.0" prefWidth="75.0" style="-fx-background-color: #7190de;" text="確定">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
               </items>
             </ToolBar>
          </top>
@@ -35,9 +39,9 @@
                         <VBox prefHeight="362.0" prefWidth="300.0">
                            <children>
                               <Region prefHeight="17.0" prefWidth="300.0" />
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="修改類別" textAlignment="CENTER" wrappingWidth="300.0">
+                              <Text fill="#1b488b" strokeType="OUTSIDE" strokeWidth="0.0" text="修改類別" textAlignment="CENTER" wrappingWidth="300.0">
                                  <font>
-                                    <Font size="25.0" />
+                                    <Font name="System Bold" size="25.0" />
                                  </font>
                               </Text>
                               <Region prefHeight="22.0" prefWidth="300.0" />
@@ -45,17 +49,17 @@
                                  <children>
                                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="請選擇要修改的類別：" />
                                     <Region prefHeight="23.0" prefWidth="23.0" />
-                                    <ChoiceBox prefWidth="150.0" />
+                                    <ChoiceBox prefWidth="150.0" style="-fx-background-color: #7190de;" />
                                  </children>
                               </HBox>
                               <Region prefHeight="88.0" prefWidth="300.0" />
-                              <Line endX="190.0" startX="-100.0" />
+                              <Line endX="492.0" startX="-100.0" startY="-0.8284525275230408" stroke="#b8c5db" strokeWidth="8.0" />
                               <Region prefHeight="22.0" prefWidth="300.0" />
                               <HBox prefHeight="100.0" prefWidth="200.0">
                                  <children>
                                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="請輸入新的類別名稱：" />
                                     <Region prefHeight="100.0" prefWidth="21.0" />
-                                    <TextField prefHeight="23.0" prefWidth="152.0" promptText="請輸入新的類別名稱" />
+                                    <TextField prefHeight="23.0" prefWidth="152.0" promptText="請輸入新的類別名稱" style="-fx-background-color: #7190de;" />
                                  </children>
                               </HBox>
                            </children>
@@ -70,20 +74,20 @@
                <children>
                   <HBox>
                      <children>
-                        <Region prefHeight="361.0" prefWidth="3.0" />
+                        <Region prefHeight="361.0" prefWidth="5.0" />
                         <VBox prefHeight="361.0" prefWidth="299.0">
                            <children>
                               <Region prefHeight="17.0" prefWidth="300.0" />
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="修改任務" textAlignment="CENTER" wrappingWidth="300.0">
+                              <Text fill="#1b488b" strokeType="OUTSIDE" strokeWidth="0.0" text="修改任務" textAlignment="CENTER" wrappingWidth="300.0">
                                  <font>
-                                    <Font size="25.0" />
+                                    <Font name="System Bold" size="25.0" />
                                  </font>
                               </Text>
                               <Region prefHeight="22.0" prefWidth="300.0" />
                               <HBox prefHeight="21.0" prefWidth="300.0">
                                  <children>
                                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="請選擇要修改任務的類別：" />
-                                    <ChoiceBox prefWidth="150.0" />
+                                    <ChoiceBox prefWidth="150.0" style="-fx-background-color: #7190de;" />
                                  </children>
                               </HBox>
                               <Region prefHeight="19.0" prefWidth="300.0" />
@@ -91,28 +95,27 @@
                                  <children>
                                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="請選擇要修改的任務：" />
                                     <Region prefHeight="79.0" prefWidth="23.0" />
-                                    <ChoiceBox prefWidth="150.0" />
+                                    <ChoiceBox prefWidth="150.0" style="-fx-background-color: #7190de;" />
                                  </children>
                               </HBox>
                               <Region prefHeight="29.0" prefWidth="300.0" />
-                              <Line endX="190.0" startX="-100.0" />
                               <Region prefHeight="22.0" prefWidth="300.0" />
                               <HBox prefHeight="38.0" prefWidth="300.0">
                                  <children>
                                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="請選擇新的類別 ：" />
                                     <Region prefHeight="35.0" prefWidth="44.0" />
-                                    <ChoiceBox prefWidth="150.0" />
+                                    <ChoiceBox prefWidth="150.0" style="-fx-background-color: #7190de;" />
                                  </children>
                               </HBox>
                               <HBox prefHeight="37.0" prefWidth="300.0">
                                  <children>
                                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="請輸入新的任務名稱 ：" />
-                                    <Region prefHeight="43.0" prefWidth="17.0" />
-                                    <TextField prefHeight="23.0" prefWidth="151.0" promptText="請輸入新的任務名稱" />
+                                    <Region prefHeight="37.0" prefWidth="19.0" />
+                                    <TextField prefHeight="23.0" prefWidth="151.0" promptText="請輸入新的任務名稱" style="-fx-background-color: #7190de;" />
                                  </children>
                               </HBox>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="請輸入新的截止日期 (移除日期請選擇-1)：" />
-                              <DatePicker />
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="請選擇新的截止日期 (移除日期請選擇-1)：" />
+                              <DatePicker style="-fx-background-color: #7190de;" />
                            </children>
                         </VBox>
                      </children>
@@ -121,7 +124,7 @@
             </Pane>
          </right>
          <center>
-            <Line endX="100.0" startX="100.0" startY="360.0" BorderPane.alignment="CENTER" />
+            <Line endX="100.0" startX="100.0" startY="360.0" stroke="#345994" strokeWidth="8.0" BorderPane.alignment="CENTER" />
          </center>
       </BorderPane>
    </children>
