--- a/src/main/resources/edu/ncku/todo/ui/primary.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/primary.fxml
@@ -9,7 +9,7 @@
     xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ncku.todo.ui.SceneController">
     <children>
         <Label text="Primary View" />
-        <Button fx:id="primaryButton" text="Switch to Secondary View" onAction="#switchToSecondary" />
+        <Button fx:id="primaryButton" text="Switch to Secondary View" />
     </children>
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
