--- a/src/main/resources/edu/ncku/todo/ui/mainView.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/mainView.fxml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -17,15 +14,16 @@
 <?import javafx.scene.text.Text?>
 
 <AnchorPane id="AnchorPane" opacity="0.9" prefHeight="548.0" prefWidth="819.0" style="-fx-background-color: #a2b9de;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ncku.todo.ui.MainViewController">
-    <children>
+   <children>
       <BorderPane prefHeight="548.0" prefWidth="819.0">
          <top>
             <ToolBar prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #b8c5db;" BorderPane.alignment="CENTER">
-              <items>
+               <items>
                   <Button fx:id="mainViewAddBotton" mnemonicParsing="false" onAction="#switchToAdd" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="新增類別/任務">
                      <cursor>
                         <Cursor fx:constant="HAND" />
-                     </cursor></Button>
+                     </cursor>
+                  </Button>
                   <Button fx:id="mainViewModButton" layoutX="10.0" layoutY="13.0" mnemonicParsing="false" onAction="#switchToModify" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="修改類別/任務">
                      <cursor>
                         <Cursor fx:constant="HAND" />
@@ -37,29 +35,9 @@
                      </cursor>
                   </Button>
                   <Region prefHeight="29.0" prefWidth="522.0" />
-              </items>
+               </items>
             </ToolBar>
          </top>
-         <left>
-            <VBox BorderPane.alignment="CENTER">
-               <children>
-                  <TabPane prefHeight="59.0" prefWidth="337.0" style="-fx-background-color: #b4caed;" tabClosingPolicy="UNAVAILABLE" />
-                  <TableView prefHeight="508.0" prefWidth="337.0" style="-fx-background-color: #b4caed;">
-                    <columns>
-                        <TableColumn editable="false" prefWidth="75.0" sortable="false" style="-fx-background-color: ccd8eb;" text="任務名稱" />
-                      <TableColumn editable="false" prefWidth="185.0" sortable="false" style="-fx-background-color: #ccd8eb;" text="任務期限" />
-                      <TableColumn editable="false" prefWidth="75.0" sortable="false" style="-fx-background-color: #ccd8eb;" text="任務狀態" />
-                    </columns>
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin>
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </TableView>
-               </children>
-            </VBox>
-         </left>
          <right>
             <AnchorPane prefHeight="508.0" prefWidth="483.0" style="-fx-background-color: #a2b9de;" BorderPane.alignment="CENTER">
                <children>
@@ -169,6 +147,10 @@
                   </HBox>
                </children>
             </AnchorPane>
-         </right></BorderPane>
+         </right>
+         <left>
+            <TabPane fx:id="categoryPane" prefHeight="59.0" prefWidth="337.0" style="-fx-background-color: #b4caed;" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER" />
+         </left>
+      </BorderPane>
    </children>
 </AnchorPane>
