--- a/src/main/resources/edu/ncku/todo/ui/add.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/add.fxml
@@ -16,18 +16,21 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" opacity="0.8" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #a2b9de;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ncku.todo.ui.AddController">
+<AnchorPane id="AnchorPane" opacity="0.8" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #a2b9de;"
+   xmlns="http://javafx.com/javafx/23.0.1"
+   xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ncku.todo.ui.AddController">
    <children>
       <BorderPane prefHeight="400.0" prefWidth="600.0">
          <top>
             <ToolBar prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #b8c5db;" BorderPane.alignment="CENTER">
-              <items>
+               <items>
                   <Region prefHeight="29.0" prefWidth="501.0" />
-                <Button fx:id="ModComfirmButton" mnemonicParsing="false" onAction="#switchToMainView" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" prefHeight="23.0" prefWidth="83.0" style="-fx-background-color: #7190de;" text="確定">
+                  <Button fx:id="ModComfirmButton" mnemonicParsing="false" onAction="#switchToMainView" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" prefHeight="23.0" prefWidth="83.0" style="-fx-background-color: #7190de;" text="%ui.confirm">
                      <cursor>
                         <Cursor fx:constant="HAND" />
-                     </cursor></Button>
-              </items>
+                     </cursor>
+                  </Button>
+               </items>
             </ToolBar>
          </top>
          <left>
@@ -36,7 +39,7 @@
                   <VBox layoutX="4.0" layoutY="-1.0">
                      <children>
                         <Region prefHeight="17.0" prefWidth="300.0" />
-                        <Text fill="#1b488b" strokeType="OUTSIDE" strokeWidth="0.0" text="新增類別" textAlignment="CENTER" wrappingWidth="300.0">
+                        <Text fill="#1b488b" strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.addCategory" textAlignment="CENTER" wrappingWidth="300.0">
                            <font>
                               <Font name="System Bold" size="25.0" />
                            </font>
@@ -46,9 +49,9 @@
                         <HBox prefHeight="54.0" prefWidth="300.0">
                            <children>
                               <Region prefHeight="200.0" prefWidth="3.0" />
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="請輸入類別名稱：" />
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.inputCategoryName" />
                               <Region layoutX="10.0" layoutY="10.0" prefHeight="54.0" prefWidth="33.0" />
-                              <TextField promptText="請輸入任務名稱" style="-fx-background-color: #7190de;" />
+                              <TextField promptText="%ui.CategoryName" style="-fx-background-color: #7190de;" />
                            </children>
                         </HBox>
                      </children>
@@ -65,7 +68,7 @@
                         <VBox>
                            <children>
                               <Region prefHeight="17.0" prefWidth="300.0" />
-                              <Text fill="#1b488b" strokeType="OUTSIDE" strokeWidth="0.0" text="新增任務" textAlignment="CENTER" wrappingWidth="300.0">
+                              <Text fill="#1b488b" strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.addTask" textAlignment="CENTER" wrappingWidth="300.0">
                                  <font>
                                     <Font name="System Bold" size="25.0" />
                                  </font>
@@ -76,20 +79,20 @@
                                     <Region prefHeight="17.0" prefWidth="200.0" />
                                     <HBox prefHeight="53.0" prefWidth="300.0">
                                        <children>
-                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="請選擇要新增任務到哪個類別：" />
+                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.pickCategoryToAdd" />
                                           <ChoiceBox prefHeight="23.0" prefWidth="125.0" style="-fx-background-color: #7190de;" />
                                        </children>
                                     </HBox>
                                     <HBox prefHeight="54.0" prefWidth="300.0">
                                        <children>
-                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="請輸入任務名稱：" />
+                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.inputTaskName" />
                                           <Region prefHeight="54.0" prefWidth="69.0" />
-                                          <TextField prefHeight="23.0" prefWidth="128.0" promptText="請輸入任務名稱" style="-fx-background-color: #7190de;" />
+                                          <TextField prefHeight="23.0" prefWidth="128.0" promptText="%ui.TaskName" style="-fx-background-color: #7190de;" />
                                        </children>
                                     </HBox>
                                     <HBox prefHeight="21.0" prefWidth="300.0">
                                        <children>
-                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="請選擇任務的截止日期 :" />
+                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%pickDueDate" />
                                           <Region prefHeight="23.0" prefWidth="25.0" />
                                           <DatePicker prefHeight="23.0" prefWidth="143.0" style="-fx-background-color: #7190de;" />
                                        </children>
@@ -105,6 +108,7 @@
          </right>
          <center>
             <Line endX="100.0" startX="100.0" startY="360.0" stroke="#345994" strokeWidth="8.0" BorderPane.alignment="CENTER" />
-         </center></BorderPane>
+         </center>
+      </BorderPane>
    </children>
 </AnchorPane>
