--- a/src/main/resources/edu/ncku/todo/ui/mainView.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/mainView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TabPane?>
@@ -19,17 +20,17 @@
          <top>
             <ToolBar prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #b8c5db;" BorderPane.alignment="CENTER">
                <items>
-                  <Button fx:id="mainViewAddBotton" mnemonicParsing="false" onAction="#switchToAdd" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="新增類別/任務">
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                  </Button>
-                  <Button fx:id="mainViewModButton" layoutX="10.0" layoutY="13.0" mnemonicParsing="false" onAction="#switchToModify" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="修改類別/任務">
+                  <Button fx:id="mainViewAddBotton" mnemonicParsing="false" onAction="#switchToAdd" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.add">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
                   <Button fx:id="mainViewModButton" layoutX="10.0" layoutY="13.0" mnemonicParsing="false" onAction="#switchToModify" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.modify">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="mainViewModButton" layoutX="10.0" layoutY="13.0" mnemonicParsing="false" onAction="#switchToModify" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.setting">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
@@ -72,22 +73,26 @@
                            <center>
                               <HBox alignment="CENTER" prefHeight="49.0" prefWidth="10.0" spacing="10" BorderPane.alignment="CENTER">
                                  <children>
-                                    <Text fx:id="yearText" fill="#3566d7" text="YYYY" textAlignment="CENTER" wrappingWidth="75.0">
+                                    <Region prefWidth="5.0" />
+                                    <Text fx:id="yearText" fill="#3566d7" text="YYYY" textAlignment="CENTER" wrappingWidth="80.0">
                                        <font>
-                                          <Font size="30.0" />
+                                          <Font size="32.0" />
                                        </font>
                                     </Text>
-                                    <Text fx:id="monthText" fill="#3668d6" text="MMM" textAlignment="CENTER" wrappingWidth="90.0">
+                                    <Text fx:id="monthText" fill="#3668d6" text="MMM" textAlignment="CENTER" wrappingWidth="95.0">
                                        <font>
-                                          <Font size="30.0" />
+                                          <Font size="32.0" />
                                        </font>
                                     </Text>
                                  </children>
                               </HBox>
                            </center>
                            <top>
-                              <Region prefHeight="12.0" prefWidth="49.0" BorderPane.alignment="CENTER" />
+                              <Region prefHeight="15.0" prefWidth="49.0" BorderPane.alignment="CENTER" />
                            </top>
+                           <bottom>
+                              <Region prefHeight="8.0" prefWidth="49.0" BorderPane.alignment="CENTER" />
+                           </bottom>
                         </BorderPane>
                         <HBox alignment="CENTER" prefHeight="45.0" prefWidth="483.0" spacing="16.0">
                            <children>
@@ -152,6 +157,7 @@
                               <Insets />
                            </opaqueInsets>
                         </HBox>
+                        <Region prefHeight="10.0" />
                         <FlowPane fx:id="calendarPane" alignment="TOP_CENTER" hgap="5.0" prefHeight="400.0" prefWidth="483.0" vgap="5.0" />
                      </children>
                   </VBox>
