--- a/src/main/resources/edu/ncku/todo/ui/addCategory.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/addCategory.fxml
@@ -15,9 +15,9 @@
 
 <AnchorPane id="AnchorPane" minHeight="350.0" opacity="0.85" prefHeight="350.0" prefWidth="400.0" style="-fx-background-color: #a2b9de;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ncku.todo.ui.AddCategoryController">
    <children>
-      <BorderPane prefWidth="400.0">
+      <BorderPane prefHeight="350.0" prefWidth="401.0">
          <top>
-            <ToolBar prefWidth="400.0" style="-fx-background-color: #b8c5db;" BorderPane.alignment="CENTER">
+            <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefWidth="400.0" style="-fx-background-color: #b8c5db;" BorderPane.alignment="CENTER">
                <items>
                   <Button fx:id="AddCategoryConfirmButton" mnemonicParsing="false" onAction="#onConfirm" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.confirm">
                      <cursor>
@@ -47,7 +47,7 @@
                            <children>
                               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.inputCategoryName" wrappingWidth="200.0" />
                               <Region prefHeight="70.0" prefWidth="32.0" HBox.hgrow="ALWAYS" />
-                              <TextField maxWidth="155.0" promptText="ui.CategoryName" style="-fx-background-color: #7190de;" />
+                              <TextField maxWidth="155.0" promptText="%ui.CategoryName" style="-fx-background-color: #7190de;" />
                            </children>
                         </HBox>
                      </children>
