--- a/src/main/resources/edu/ncku/todo/ui/addTask.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/addTask.fxml
@@ -17,9 +17,9 @@
 
 <AnchorPane id="AnchorPane" minHeight="350.0" opacity="0.85" prefHeight="350.0" prefWidth="400.0" style="-fx-background-color: #a2b9de;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ncku.todo.ui.AddTaskController">
    <children>
-      <BorderPane prefWidth="400.0">
+      <BorderPane prefHeight="350.0" prefWidth="401.0">
          <top>
-            <ToolBar prefWidth="400.0" style="-fx-background-color: #b8c5db;" BorderPane.alignment="CENTER">
+            <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefWidth="400.0" style="-fx-background-color: #b8c5db;" BorderPane.alignment="CENTER">
                <items>
                   <Button fx:id="AddTaskConfirmButton" mnemonicParsing="false" onAction="#onConfirm" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.confirm">
                      <cursor>
