--- a/src/main/resources/edu/ncku/todo/ui/modifyCategory.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/modifyCategory.fxml
@@ -14,18 +14,18 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" minHeight="350.0" opacity="0.85" prefHeight="350.0" prefWidth="400.0" style="-fx-background-color: #a2b9de;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ncku.todo.ui.ModifyCategoryController">
+<AnchorPane id="AnchorPane" minHeight="350.0" opacity="0.85" prefHeight="350.0" prefWidth="401.0" style="-fx-background-color: #a2b9de;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ncku.todo.ui.ModifyCategoryController">
    <children>
-      <BorderPane prefWidth="400.0">
+      <BorderPane prefHeight="350.0" prefWidth="401.0">
          <top>
-            <ToolBar prefWidth="400.0" style="-fx-background-color: #b8c5db;" BorderPane.alignment="CENTER">
+            <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefWidth="400.0" style="-fx-background-color: #b8c5db;" BorderPane.alignment="CENTER">
               <items>
                 <Button fx:id="ModCategoryConfirmButton" mnemonicParsing="false" onAction="#onConfirm" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.confirm" />
               </items>
             </ToolBar>
          </top>
          <center>
-            <VBox prefHeight="400.0" prefWidth="313.0" BorderPane.alignment="CENTER">
+            <VBox prefHeight="320.0" prefWidth="389.0" BorderPane.alignment="CENTER">
                <children>
                   <Region prefHeight="15.0" prefWidth="200.0" />
                   <HBox alignment="TOP_CENTER" prefHeight="45.0" prefWidth="200.0">
@@ -52,7 +52,7 @@
                   </VBox>
                   <Line endX="381.0" layoutX="111.0" layoutY="26.0" stroke="#b8c5db" strokeWidth="8.0" />
                   <Region layoutX="10.0" layoutY="72.0" prefHeight="52.0" prefWidth="393.0" />
-                  <HBox prefHeight="93.0" prefWidth="401.0">
+                  <HBox prefHeight="75.0" prefWidth="389.0">
                      <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.inputNewCategoryName" wrappingWidth="200.0" />
                         <Region prefHeight="93.0" prefWidth="68.0" HBox.hgrow="ALWAYS" />
